Hromadné zastavování stopek

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="no">Ne</string>
     
     <string name="settingShowAppreciation">Ukazovat poděkování</string>
+    <string name="settingStopAllWhenGameStopped">Zastavit vše při zastavení hry</string>
 </resources>
