--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,9 @@
     <string name="cancel">Zrušit</string>
     <string name="yes">Ano</string>
     <string name="no">Ne</string>
+    <string name="seconds">s</string>
     
     <string name="settingShowAppreciation">Ukazovat poděkování</string>
     <string name="settingStopAllWhenGameStopped">Zastavit vše při zastavení hry</string>
+    <string name="settingAlertBeforeAttackEnd">Upozornit na konec útoku předem</string>
 </resources>
