Úprava nastavení upozornení před koncem útoku

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="yes">Ano</string>
     <string name="no">Ne</string>
     <string name="seconds">s</string>
+    <string name="plus">+</string>
+    <string name="minus">-</string>
     
     <string name="settingShowAppreciation">Ukazovat poděkování</string>
     <string name="settingStopAllWhenGameStopped">Zastavit vše při zastavení hry</string>
